--- a/style.css
+++ b/style.css
@@ -92,21 +92,39 @@ h6 {
 .body {
   height: 100%;
   line-height: 1;
-  font-size: 16px;
-  color: black;
+  font-size: 14px;
+  color: #252b42; /* цвет для текста */
   font-family: Montserrat;
+  font-weight: 500; /* жирность текста */
 }
 
 .wrapper {
   font-family: Montserrat;
   min-height: 100%;
   overflow: hidden;
+  display: flex;
+  flex-direction: column;
 }
 
 ._container {
   max-width: 1046px;
   margin: 0 auto;
+  padding: 0 15px; /* чтобы края не прилипали к экрану при адаптиве*/
+  box-sizing: content-box; /* наш padding отбирает пространство внутри. Ставим это правило, чтобы такого не было */
 }
+._ibg {
+  position: relative;
+}
+._ibg img {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  object-fit: cover; /* растягиваем изображение на весь экран */
+}
+
+/* --------------------header------------------ */
 
 .header {
   position: absolute;
@@ -114,21 +132,134 @@ h6 {
   left: 0;
   top: 0;
   z-index: 50;
-  display: flex;
-  min-height: 104px;
-  align-items: center;
 }
 .header__container {
+  display: flex;
+  align-items: center; /* в сочетании с flex центрирует дочерние элементы по двум осям */
+  min-height: 104px;
 }
+
+@media (max-width: 479px) {
+  .header__container {
+    min-height: 70px;
+  }
+}
+
 .header__logo {
+  font-size: 24px;
+  font-weight: 700; /* жирность */
+  color: inherit; /* чтобы ссылка наследовала цвет */
 }
+
 .header__menu {
+  margin-left: 133px;
 }
+
+@media (max-width: 992px) {
+  .header__menu {
+    margin-left: 80px;
+  }
+}
+
+@media (max-width: 767px) {
+  .header__menu {
+    margin-left: 40px;
+  }
+}
+
+@media (max-width: 479px) {
+  .header__menu {
+    margin-left: 20px;
+  }
+}
+
 .menu {
+  padding: 5px 0; /* при адаптиве контент может начать упираться в потолок. Поставим отступы безовасности для такого крайнего случая */
 }
 .menu__list {
+  display: flex;
+  flex-wrap: wrap;
+  /* gap: 21px; */
 }
 .menu__item {
 }
+
+/* фрилансер почему-то задаёт отступы через это, а не, как я сверху, через gap */
+.menu__item:not(:last-child) {
+  margin: 0 21px 0 0;
+}
+
 .menu__link {
+  color: #737373;
+  font-weight: 600;
+  /* line-height: 171%; высота строки. Задаётся в процентах относительно шрифта */
+  line-height: calc(24 / 14 * 100%); /* либо так можно задать */
+}
+
+@media (max-width: 479px) {
+  .menu__link {
+    font-size: 18px;
+  }
+}
+
+/* --------------------main------------------ */
+
+.page {
+  flex: 1 1 auto; /* main является флекс-элементом. Примкняем эту технологию, чтобы прибить футер к низу*/
+}
+.page__main-block {
+}
+.main-block {
+  position: relative;
+}
+.main-block__container {
+}
+._container {
+}
+.main-block__body {
+  padding-top: 184px; /* отталкиваемся от самого верха документа!*/
+  padding-bottom: 191px;
+  position: relative;
+  z-index: 2;
+  max-width: 509px;
+}
+
+.main-block__body > *:not(:last-child) {
+  /*обращаемся ко всем дочерним элементам первого уровня, кроме последнего*/
+  margin: 0 0 35px 0;
+}
+
+.main-block__title {
+  font-size: 58px;
+  line-height: calc(80 / 58 * 100%); /*80 - line-height. заданный в макете*/
+  font-weight: 800;
+}
+.main-block__text {
+  font-size: 20px;
+  color: #737373;
+  line-height: 1.5; /*то же, что и 150%*/
+}
+.main-block__buttons {
+  display: inline-flex; /*контент внутри контейнера флексовый, но сам контейнер вёдёт себя как инлайновый элемент*/
+}
+.main-block__button {
+  background: #ff7b47;
+  border-radius: 37px;
+}
+.main-block__button_border {
+}
+
+.main-block__image {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+}
+
+.main-block__image img {
+  object-position: top; /* иногда object-fit: cover размещает изображение так, что контентная часть (лицо человека, наприер) скрывается. Это правило может помочь в данном случае*/
+}
+
+.footer {
 }
