--- a/style.css
+++ b/style.css
@@ -96,6 +96,7 @@ h6 {
   color: #252b42; /* цвет для текста */
   font-family: Montserrat;
   font-weight: 500; /* жирность текста */
+  background: #fafafa;
 }
 
 .wrapper {
@@ -202,13 +203,43 @@ h6 {
   }
 }
 
-/* --------------------main------------------ */
-
+/* --------------------page------------------ */
 .page {
   flex: 1 1 auto; /* main является флекс-элементом. Примкняем эту технологию, чтобы прибить футер к низу*/
 }
 .page__main-block {
 }
+
+.page__services {
+  position: relative;
+  z-index: 2;
+  margin-top: -111px; /* используем отрицаетельный мерджин, чтобы поднять карточки наверх так, чтобы кнтент ниже их подтянулся следом*/
+}
+/* --------------------header-block------------------ */
+
+.header-block {
+  text-align: center;
+  letter-spacing: 0.2px;
+}
+.header-block__title {
+  font-size: 40px;
+  font-weight: 700;
+  line-height: 142%;
+}
+
+.header-block__title:not(:last-child) {
+  margin: 0 0 10px 0;
+}
+.header-block__sub-title {
+  color: #737373;
+}
+
+/* ------------------footer------------------------ */
+
+.footer {
+}
+/* ------------------footer------------------------ */
+
 .main-block {
   position: relative;
 }
@@ -221,7 +252,7 @@ h6 {
   padding-bottom: 191px;
   position: relative;
   z-index: 2;
-  max-width: 509px;
+  max-width: 400px;
 }
 
 .main-block__body > *:not(:last-child) {
@@ -229,24 +260,65 @@ h6 {
   margin: 0 0 35px 0;
 }
 
+@media (max-width: 992px) {
+  .main-block__body {
+    padding-top: 120px; /* отталкиваемся от самого верха документа!*/
+    padding-bottom: 191px;
+  }
+}
+
 .main-block__title {
   font-size: 58px;
   line-height: calc(80 / 58 * 100%); /*80 - line-height. заданный в макете*/
   font-weight: 800;
+  letter-spacing: 0.2px;
 }
+
+@media (max-width: 479px) {
+  .main-block__title {
+    font-size: 42px;
+  }
+}
+
 .main-block__text {
   font-size: 20px;
   color: #737373;
   line-height: 1.5; /*то же, что и 150%*/
 }
+
 .main-block__buttons {
   display: inline-flex; /*контент внутри контейнера флексовый, но сам контейнер вёдёт себя как инлайновый элемент*/
+  gap: 10px;
+  flex-wrap: wrap;
 }
+
 .main-block__button {
-  background: #ff7b47;
   border-radius: 37px;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  padding: 5px 36px;
+  min-height: 48px;
+  letter-spacing: 0.2px;
+  font-weight: 700;
+  line-height: 150%;
+  text-align: center;
 }
+
+@media (max-width: 479px) {
+  .main-block__button {
+    flex: 1 1 auto;
+  }
+}
+
+.main-block__button_orange {
+  background: #ff7b47;
+  color: #fff;
+}
+
 .main-block__button_border {
+  color: #0d5c63;
+  border: 1px solid #0d5c63;
 }
 
 .main-block__image {
@@ -261,5 +333,110 @@ h6 {
   object-position: top; /* иногда object-fit: cover размещает изображение так, что контентная часть (лицо человека, наприер) скрывается. Это правило может помочь в данном случае*/
 }
 
-.footer {
+@media (max-width: 1300px) {
+  .main-block__image img {
+    object-position: right; /* иногда object-fit: cover размещает изображение так, что контентная часть (лицо человека, наприер) скрывается. Это правило может помочь в данном случае*/
+  }
+}
+
+.services {
+}
+.services__container {
+}
+.services__body {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+@media (max-width: 992px) {
+  .services__body {
+    gap: 15px;
+  }
+}
+
+.services__column {
+  padding: 0 15px;
+  flex: 0 1 33.333%;
+}
+
+@media (max-width: 992px) {
+  .services__column {
+    flex: 0 1 50%;
+  }
+}
+
+.services__item {
+  box-shadow: 0 13px 19px rgba(0, 0, 0, 0.07);
+  background-color: #fff;
+  padding: 35px; /*padding для внутреннего отступа*/
+  height: 100%; /*чтобы все карточки растягивались в случае, если в какой-то одной будет добавлен контент, её растягивающий*/
+}
+.item-service {
+}
+
+.item-service_green {
+  background: #0d5c63;
+}
+
+.item-service_green .item-service__title {
+  color: #fff;
+}
+
+.item-service_green .item-service__text {
+  color: #fff;
+}
+
+.item-service > *:not(:last-child) {
+  margin: 0 0 10px 0;
+}
+
+.item-service__icon {
+}
+
+.item-service__icon img {
+  width: 30px;
+  height: 30px;
+}
+.item-service__title {
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 133%;
+  letter-spacing: 0.1px;
+}
+.item-service__text {
+  color: #737373;
+  line-height: 142%;
+}
+
+.advantages {
+  padding: 80px 0;
+}
+.advantages__container {
+}
+.advantages__header {
+  margin: 0 0 50px 0;
+}
+.advantages__body {
+  display: flex;
+  margin: 0 -15px;
+}
+.advantages__column {
+  padding: 0 15px;
+  flex: 0 1 25%;
+}
+.advantages__item {
+  background-color: #fff;
+  padding: 30px 40px;
+  text-align: center;
+}
+.advantages__icon {
+}
+.advantages__icon img {
+  width: 30px;
+  height: 30px;
+}
+.advantages__value {
+}
+.advantages__text {
 }
